--- a/config.json
+++ b/config.json
@@ -1,26 +1,32 @@
 {
   "development": {
+    "secret": "",
     "host": "localhost",
     "port": "8000",
     "mailgun": {
-      "domain": "mg.moneyprintergobrr.io"
+      "domain": "mg.moneyprintergobrr.io",
+      "api_key": ""
     },
     "iex": {
       "env": "development",
-      "publishable": "pk_3394e9ba369a45d2b3efdd6c0bbb168f"
+      "publishable": "pk_3394e9ba369a45d2b3efdd6c0bbb168f",
+      "secret": ""
     },
     "plaid": {
       "env": "development",
       "client_id": "610b0a72aed5de0015d334ed",
       "version": "2020-09-14",
       "country_codes": "US",
-      "products": ["Link", "Investments"]
+      "products": ["Link", "Investments"],
+      "secret": ""
     },
     "db": {
       "host": "127.0.0.1",
       "port": "3306",
       "schema": "mp_dev",
-      "debug": "false"
+      "debug": "false",
+      "username": "",
+      "password": ""
     },
     "redis": {
       "host": "localhost",
