--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,41 +11,51 @@ services:
       - 3306:3306
   api:
     build:
-      dockerfile: ./../infrastructure/docker/app/Dockerfile.api
-      context: ../../src
+      dockerfile: Dockerfile
+      context: .
     ports:
       - 80:80
       - 443:443
     environment:
       MP_REDIS__HOST: redis
       MP_DB__HOST: db
+    env_file:
+      - .env.dev
     depends_on: ["redis", "db"]
+    image: api
+    entrypoint: ["python", "bin/api-server.py", "&&", "tail", "-f", "logs/mp.log"]
   data-server:
     image: api
     environment:
       MP_REDIS__HOST: redis
       MP_DB__HOST: db
+    env_file:
+      - .env.dev
     depends_on: ["redis", "db"]
-    entrypoint: cd app && python server/bin/data-server.py && tail -f logs/mp.log
+    entrypoint: ["python", "bin/data-server.py", "&&", "tail", "-f", "logs/mp.log"]
   task-runner:
     image: api
     environment:
       MP_REDIS__HOST: redis
       MP_DB__HOST: db
+    env_file:
+      - .env.dev
     depends_on: ["redis", "db"]
-    entrypoint: cd app && python server/bin/task-runner.py && tail -f logs/mp.log
+    entrypoint: ["python", "bin/task-runner.py"]
   scheduler:
     image: api
     environment:
       MP_REDIS__HOST: "redis"
       MP_DB__HOST: db
+    env_file:
+      - .env.dev
     depends_on: ["redis", "db"]
-    entrypoint: cd app && rqscheduler --host $MP_REDIS__HOST --port 6379 --db 0
+    entrypoint: ["rqscheduler", "--host", redis, "--port", "6379", "--db", "0"]
   platform:
     build:
-      dockerfile: ../infrastructure/docker/app/base/Dockerfile.server
-      context: ../../src
+      dockerfile: Dockerfile.platform
+      context: .
     profiles: ["platform"]
   
-  volumes:
-    db-data:
+volumes:
+  db-data:
