--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,24 @@
-alembic==1.1.0.dev0
-aniso8601==7.0.0
-attrs==19.3.0
-Automat==0.8.0
+alembic==1.7.5
 awscli==1.18.69
-blinker==1.4
 botocore==1.16.19
-cached-property==1.5.2
-certifi==2019.11.28
-chardet==3.0.4
-click==8.0.1
-cloud-init==21.2
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-dbus-python==1.2.16
-decorator==4.4.2
-distro==1.4.0
-distro-info===0.23ubuntu1
-docutils==0.16
-dynaconf==3.1.7
-entrypoints==0.3
 Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 graphene==2.1.9
 graphene-sqlalchemy==2.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==16.10.1
-inflection==0.5.1
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jmespath==0.9.4
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
 jupyter-core==4.6.3
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-Mako==1.1.0
-MarkupSafe==2.0.1
-more-itertools==4.2.0
-mypy-extensions==0.4.3
-mysqlclient==2.0.3
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-pexpect==4.6.0
-Pillow==7.0.0
-promise==2.3
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-Pygments==2.3.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-PyYAML==5.3.1
-redis==3.5.3
-requests==2.22.0
-requests-unixsocket==0.2.0
-roman==2.0.0
-rsa==4.0
-Rx==1.6.1
-s3transfer==0.3.3
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-singledispatch==3.7.0
-six==1.14.0
-sos==4.1
-SQLAlchemy==1.3.12
-sqlalchemy-orm==1.2.2
-ssh-import-id==5.10
-systemd-python==234
-traitlets==4.3.3
 Twisted==18.9.0
-typing-extensions==3.10.0.0
-typing-inspect==0.7.1
-ubuntu-advantage-tools==27.2
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-wadllib==1.3.3
 Werkzeug==2.0.1
-zipp==1.0.0
-zope.interface==4.7.1
+mysqlclient==2.0.3
+SQLAlchemy==1.4.25
+sqlalchemy-orm==1.2.2
+dynaconf==3.1.7
+PyJWT==2.1.0
+redis==3.5.3
+requests==2.26.0
+SSEClient==0.0.27
+rq-scheduler==0.11.0
+rq-dashboard==0.6.1
+flask-cors==3.0.10
+flask-socketio==5.1.1
