Existing tests are back online

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .ipynb_checkpoints
 __pycache__
 .venv
-src/logs/**/*
 *.log
 .secrets.*
 .gitsecret/keys/random_seed
@@ -11,3 +10,4 @@ src/platform/ssh/mp-devops
 **/.idea
 .terraform
 .terraform.lock.hcl
+logs
