--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,10 @@ rq-scheduler==0.11.0
 rq-dashboard==0.6.1
 flask-cors==3.0.10
 flask-socketio==5.1.1
+pytest==6.2.5
+numpy==1.21.4
+bcrypt==3.2.0
+plaid-python==8.8.0
+pandas==1.3.5
+iexfinance==0.5.0
+pytest-mock==3.6.1
