--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,5 @@ MP_DB__PASSWORD="mp!QAZxsw2"
 MP_SECRET="omg money printer go brrr hahaha"
 MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
 MYSQL_ROOT_PASSWORD=dev-root-password
+MATOMO_DB_USERNAME: "mp_dev"
+MATOMO_DB_PASSWORD: mp!QAZxsw2
