--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,18 @@
 alembic==1.7.5
-awscli==1.18.69
-botocore==1.16.19
-Flask==2.0.1
+awscli==1.22.26
+botocore==1.23.26
+Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 graphene==2.1.9
-graphene-sqlalchemy==2.3.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
-jupyter-core==4.6.3
-Twisted==18.9.0
-Werkzeug==2.0.1
-mysqlclient==2.0.3
-SQLAlchemy==1.4.25
+jupyter-core==4.9.1
+Twisted==21.7.0
+Werkzeug==2.0.2
+mysqlclient==2.1.0
+SQLAlchemy==1.4.29
 sqlalchemy-orm==1.2.2
 dynaconf==3.1.7
-PyJWT==2.1.0
-redis==3.5.3
+PyJWT==2.3.0
+redis==4.0.2
 requests==2.26.0
 SSEClient==0.0.27
 rq-scheduler==0.11.0
@@ -23,7 +20,7 @@ rq-dashboard==0.6.1
 flask-cors==3.0.10
 flask-socketio==5.1.1
 pytest==6.2.5
-numpy==1.21.4
+numpy==1.21.5
 bcrypt==3.2.0
 plaid-python==8.8.0
 pandas==1.3.5
@@ -34,3 +31,5 @@ marshmallow==3.14.1
 pytest-parallel==0.1.1
 prometheus-client==0.12.0
 apispec-webframeworks==0.5.2
+graphene-sqlalchemy>=2.0
+flask-graphql>=2.0.1
