--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Command runner for the Money Printer server project",
   "scripts": {
     "clean": "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete",
-    "test": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest --workers 1 --tests-per-worker 1 --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
-    "test:focus": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest -m focus --workers 1 --tests-per-worker 1 --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
+    "build": "docker compose -f docker-compose.dev.yml build",
+    "build:prod": "docker compose -f docker-compose.prod.yml build",
+    "test": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest -n auto --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
+    "test:focus": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
     "db:init": "./bin/dev/init-db.sh",
     "db:migrate": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate -m \"$npm_config_name\"",
     "db:update": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic upgrade head\"",
+    "db:test:update": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=test alembic upgrade head\"",
     "start": "docker compose -f docker-compose.dev.yml up -d",
     "start:prod": "docker compose -f docker-compose.prod.yml up -d",
     "stop": "docker compose -f docker-compose.dev.yml stop",
