Plaid API tests implemented

--- a/config.json
+++ b/config.json
@@ -62,8 +62,10 @@
     "plaid": {
       "secret": "",
       "env": "test",
-      "client_id": "",
-      "version": ""
+      "client_id": "610b0a72aed5de0015d334ed",
+      "version": "2020-09-14",
+      "country_codes": "US",
+      "products": ["Link", "Investments"]
     }
   }
 }
