--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ release:
     - docker pull -t $CONTAINER_TEST_IMAGE
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
-  only:
-    - master
   rules:
+    - if: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_REF_NAME == "master"'
     - when: manual
