--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ test:
   stage: test
   before_script:
     - apk add --update nodejs npm
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
     - docker pull $CONTAINER_TEST_IMAGE
     - npm run start
