--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:19.03.12
+image: docker:19.03.12-dind
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
@@ -6,7 +6,7 @@ variables:
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 services:
-  - docker:19.03.12-dind
+  - docker:19.03.12
 
 before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
