--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "Command runner for the Money Printer server project",
   "scripts": {
     "clean": "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete",
-    "build": "docker compose -f docker-compose.dev.yml build",
-    "build:prod": "docker compose -f docker-compose.prod.yml build",
-    "test": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src python bin/dev/test.py\"",
-    "test:focus": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
-    "gendoc": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=development PYTHONPATH=src python bin/dev/gendoc.py\"",
+    "build": "docker-compose -f docker-compose.dev.yml build",
+    "build:prod": "docker-compose -f docker-compose.prod.yml build",
+    "test": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src python bin/dev/test.py\"",
+    "test:focus": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=test PYTHONPATH=src pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/\"",
+    "gendoc": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"MP_ENVIRONMENT=development PYTHONPATH=src python bin/dev/gendoc.py\"",
     "db:init": "./bin/dev/init-db.sh",
-    "db:migrate": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate\"",
-    "db:update": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic upgrade head\"",
-    "db:test:update": "docker exec --tty $(docker compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=test alembic upgrade head\"",
-    "start": "docker compose -f docker-compose.dev.yml up -d",
-    "start:prod": "docker compose -f docker-compose.prod.yml up -d",
-    "stop": "docker compose -f docker-compose.dev.yml stop",
-    "stop:prod": "docker compose -f docker-compose.prod.yml stop",
-    "down": "docker compose -f docker-compose.dev.yml down",
-    "down:prod": "docker compose -f docker-compose.prod.yml down"
+    "db:migrate": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate\"",
+    "db:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic upgrade head\"",
+    "db:test:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=test alembic upgrade head\"",
+    "start": "docker-compose -f docker-compose.dev.yml up -d",
+    "start:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "stop": "docker-compose -f docker-compose.dev.yml stop",
+    "stop:prod": "docker-compose -f docker-compose.prod.yml stop",
+    "down": "docker-compose -f docker-compose.dev.yml down",
+    "down:prod": "docker-compose -f docker-compose.prod.yml down"
   },
   "author": "Tim Gittos",
   "license": "ISC",
