--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:19.03.12-dind
+image: tgittos/gittos.net/runner-base:latest
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
@@ -29,10 +29,6 @@ build:
   
 test:
   stage: test
-  before_script:
-    - apk update && apk add --no-cache nodejs npm docker-cli python3 python3-dev libffi-dev openssl-dev gcc libc-dev make py3-pip py-pip
-    - pip install docker-compose
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
     - docker pull $CONTAINER_TEST_IMAGE
     - npm run start
