--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker/compose:latest
+image: docker/docker:dind
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
@@ -8,7 +8,7 @@ variables:
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 services:
-  - docker:dind
+  - docker/compose
 
 before_script:
     - docker version
