--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
   redis:
     image: "redis:alpine"
   matomo:
-    image: "mp-matomo"
+    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-matomo:latest"
     ports:
       - 8080:8080
     volumes:
@@ -22,7 +22,7 @@ services:
       - .env.dev
     depends_on: [ "db" ]
   prometheus:
-    image: "mp-prometheus"
+    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-prometheus:latest"
     ports:
       - 9090:9090
     entrypoint: [ "/bin/sh", "prometheus.sh" ]
