--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ test:
   script:
     - docker pull $CONTAINER_TEST_IMAGE
     - npm run start
+    - npm run db:init
     - npm run test
     - npm run down
   rules:
