--- a/.env.dev
+++ b/.env.dev
@@ -5,7 +5,7 @@ MP_DB__USERNAME="mp_dev"
 MP_DB__PASSWORD="mp!QAZxsw2"
 MP_SECRET="omg money printer go brrr hahaha"
 MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
-MYSQL_ROOT_PASSWORD=dev-root-password
-MATOMO_DB_USERNAME: "mp_dev"
-MATOMO_DB_PASSWORD: mp!QAZxsw2
-NGROK_AUTH=Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m
+MYSQL_ROOT_PASSWORD="dev-root-password"
+MATOMO_DB_USERNAME="mp_dev"
+MATOMO_DB_PASSWORD="mp!QAZxsw2"
+NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
