Switch shell db init to explicitly use docker-compose too

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 services:
-  - docker:19.03.12-dind
+  - docker:dind
 
 before_script:
     - docker version
