--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,13 @@ build:
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
     - when: manual
-  
+
 test:
   stage: test
   script:
     - docker pull $CONTAINER_TEST_IMAGE
     - npm run start
+    - sleep 30
     - npm run db:init
     - npm run test
     - npm run down
