Fail the test task if the test run has a non 0 exit code

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,9 @@ test:
     - sleep 30
     - npm run db:init
     - npm run test
+    - status=$?
     - npm run down
+    - exit status
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
     - when: manual
