--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,10 +47,9 @@ test:
 release:
   stage: release
   script:
-    - docker pull -t $CONTAINER_TEST_IMAGE
+    - docker pull $CONTAINER_TEST_IMAGE
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
   rules:
     - if: $CI_COMMIT_TAG
-    - if: '$CI_COMMIT_REF_NAME == "master"'
     - when: manual
