--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-image: git.gittos.net:5050/tgittos/gittos.net/runner-base:latest
+image: git.gittos.net:5050/tgittos/gittos.net/runner-base
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
-  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
-  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE/api:$CI_COMMIT_SHORT_SHA
+  CONTAINER_TAGGED_IMAGE: $CI_REGISTRY_IMAGE/api:$CI_COMMIT_TAG
+  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE/api:latest
 
 services:
   - docker:dind
@@ -23,7 +24,7 @@ stages:
 build:
   stage: build
   script:
-    - docker build -t $CONTAINER_TEST_IMAGE .
+    - docker build -t $CONTAINER_TEST_IMAGE api
     - docker push $CONTAINER_TEST_IMAGE
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
@@ -41,14 +42,17 @@ test:
     - exit $status
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
-    - when: manual
 
 release:
   stage: release
   script:
     - docker pull $CONTAINER_TEST_IMAGE
+    - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_TAGGED_IMAGE
+    - docker push $CONTAINER_TAGGED_IMAGE
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
   rules:
-    - if: $CI_COMMIT_TAG
-    - when: manual
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "master"'
+      when: always
+    - if: '$CI_COMMIT_REF_NAME == "master"'
+      when: manual
