--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ test:
     - npm run test
     - status=$?
     - npm run down
+    - echo "Test run status: $status"
     - exit $status
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
