--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,8 @@ test:
       docker pull $CONTAINER_TEST_IMAGE
       npm run start && sleep 10
       npm run db:init
-      npm run test && status=$?
-      echo npm exit code: $?
+      local status;
+      status=$(npm run test)
       echo status: $status
       npm run down
       exit $status
