--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: git.gittos.net:5050/tgittos/gittos.net/runner-base
+image: git.gittos.net:5050/tgittos/gittos.net/runner-base:lastest
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
@@ -31,6 +31,7 @@ build:
       docker push $CONTAINER_TEST_IMAGE
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
+      when: always
 
 test:
   stage: test
@@ -39,25 +40,30 @@ test:
       docker pull $CONTAINER_TEST_IMAGE
       npm run start && sleep 10
       npm run db:init
-      status=$(npm run test)
+      status=$(npm run test:ci)
       echo status: $status
       npm run down
       exit $status
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
+      when: always
 
 release:
   stage: release
   script:
     - |
       docker pull $CONTAINER_TEST_IMAGE
-      docker tag $CONTAINER_TEST_IMAGE $CONTAINER_TAGGED_IMAGE
-      docker push $CONTAINER_TAGGED_IMAGE
       docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
       docker push $CONTAINER_RELEASE_IMAGE
+      if [ $CI_COMMIT_TAG ]; then
+        docker tag $CONTAINER_TEST_IMAGE $CONTAINER_TAGGED_IMAGE
+        docker push $CONTAINER_TAGGED_IMAGE
+      fi;
   rules:
+    # always release if the commit was tagged
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "master"'
       when: always
-    - if: '$CI_COMMIT_REF_NAME == "master"'
+    # allow manual releasing from the main branch
+    - if: '$CI_COMMIT_TAG == null && $CI_COMMIT_REF_NAME == "master"'
       when: manual
       allow_failure: true
