--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,8 @@ services:
   redis:
     image: "redis:alpine"
   matomo:
-    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-matomo:latest"
+    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-matom\
+      o:latest"
     ports:
       - 8080:8080
     volumes:
@@ -22,7 +23,8 @@ services:
       - .env.dev
     depends_on: [ "db" ]
   prometheus:
-    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-prometheus:latest"
+    image: "git.gittos.net:5050/money-printer/money-printer-infrastructure/mp-prome\
+      theus:latest"
     ports:
       - 9090:9090
     entrypoint: [ "/bin/sh", "prometheus.sh" ]
@@ -51,7 +53,7 @@ services:
     env_file:
       - .env.dev
     depends_on: [ "redis", "db", "ngrok", "matomo", "prometheus" ]
-    image: api
+    image: git.gittos.net:5050/money-printer/money-printer-server/api:latest
     entrypoint:
       [
         "python",
