--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ include:
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
-  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE/api:$CI_COMMIT_SHORT_SHA
-  CONTAINER_TAGGED_IMAGE: $CI_REGISTRY_IMAGE/api:$CI_COMMIT_TAG
-  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE/api:latest
+  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE/mp-api:$CI_COMMIT_SHORT_SHA
+  CONTAINER_TAGGED_IMAGE: $CI_REGISTRY_IMAGE/mp-api:$CI_COMMIT_TAG
+  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE/mp-api:latest
 
 services:
   - docker:dind
@@ -29,8 +29,8 @@ build:
   stage: build
   script:
     - |
-      npm run build api
-      docker tag api $CONTAINER_TEST_IMAGE
+      npm run build mp-api
+      docker tag mp-api $CONTAINER_TEST_IMAGE
       docker push $CONTAINER_TEST_IMAGE
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
