--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ include:
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
-  CONTAINER_LATEST_IMAGE: "$CI_REGISTRY_IMAGE/mp-api:$CI_COMMIT_SHORT_SHA"
+  CONTAINER_LATEST_IMAGE: "$CI_REGISTRY_IMAGE/mp-api:latest"
   CONTAINER_RELEASE_IMAGE: "$CI_REGISTRY_IMAGE/mp-api:$CI_COMMIT_TAG"
 
 services:
