--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ iexfinance==0.5.0
 pytest-mock==3.6.1
 pytest-cov==3.0.0
 marshmallow==3.14.1
+flask-marshmallow==0.14.0
+marshmallow-sqlalchemy==0.27.0
 prometheus-client==0.12.0
 apispec-webframeworks==0.5.2
 graphene-sqlalchemy>=2.0
