--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,7 @@ MYSQL_ROOT_PASSWORD="dev-root-password"
 MATOMO_DB_USERNAME="mp_dev"
 MATOMO_DB_PASSWORD="mp!QAZxsw2"
 NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
+HASURA_MYSQL_SCHEMA="mp_dev"
+HASURA_MYSQL_PORT="3306"
+HASURA_MYSQL_USERNAME="mp_dev"
+HASURA_MYSQL_PASSWORD="mp!QAZxsw2"
