--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Command runner for the Money Printer server project",
   "scripts": {
     "clean": "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete",
-    "build": "docker-compose -f docker-compose.dev.yml build",
-    "build:prod": "docker-compose -f docker-compose.prod.yml build",
+    "build": "docker-compose -f docker-compose.dev.yml --env-file=.env.dev build",
+    "build:prod": "docker-compose -f docker-compose.prod.yml --env-file=.env.prod build",
     "test": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml ps -q api) sh -c 'python bin/dev/test.py'; exit $?",
     "test:focus": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml ps -q api) sh -c 'pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/'; exit $?",
     "test:ci": "docker exec -e MP_CI=true -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml ps -q api) sh -c 'python bin/dev/test.py'; exit $?",
@@ -14,13 +14,13 @@
     "db:migrate": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate\"",
     "db:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic upgrade head\"",
     "db:test:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=test alembic upgrade head\"",
-    "start": "docker-compose -f docker-compose.dev.yml up -d",
-    "start:prod": "docker-compose -f docker-compose.prod.yml up -d",
-    "stop": "docker-compose -f docker-compose.dev.yml stop",
-    "stop:prod": "docker-compose -f docker-compose.prod.yml stop",
-    "down": "docker-compose -f docker-compose.dev.yml down",
-    "down:prod": "docker-compose -f docker-compose.prod.yml down",
-    "recycle": "npm run stop && npm run build && npm run start",
+    "start": "docker-compose -f docker-compose.dev.yml --env-file=.env.dev up -d",
+    "start:prod": "docker-compose -f docker-compose.prod.yml --env-file=.env.prod up -d",
+    "stop": "docker-compose -f docker-compose.dev.yml --env-file=.env.dev stop",
+    "stop:prod": "docker-compose -f docker-compose.prod.yml --env-file=.env.prod stop",
+    "down": "docker-compose -f docker-compose.dev.yml --env-file=.env.dev down",
+    "down:prod": "docker-compose -f docker-compose.prod.yml --env-file=.env.prod down",
+    "recycle": "npm run stop && npm run build && npm run --env-file=.env.dev start",
     "recycle:prod": "npm run stop:prod && npm run build:prod && npm run start:prod"
   },
   "author": "Tim Gittos",
