Flask now runs in dev mode, bound to public IP

--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "db:migrate": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate\"",
     "db:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic upgrade head\"",
     "db:test:update": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=test alembic upgrade head\"",
-    "start": "docker-compose -f docker-compose.dev.yml up -d",
-    "start:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "start": "docker-compose -f docker-compose.dev.yml start",
+    "start:prod": "docker-compose -f docker-compose.prod.yml start",
     "stop": "docker-compose -f docker-compose.dev.yml stop",
     "stop:prod": "docker-compose -f docker-compose.prod.yml stop",
-    "down": "docker-compose -f docker-compose.dev.yml down",
+    "up": "docker-compose -f docker-compose.dev.yml up -d",
+    "up:prod": "docker-compose -f docker-compose.prod.yml down",
+    "down": "docker-compose -f docker-compose.dev.yml up",
     "down:prod": "docker-compose -f docker-compose.prod.yml down",
     "logs": "docker-compose -f docker-compose.dev.yml logs -f",
     "logs:prod": "docker-compose -f docker-compose.prod.yml logs -f",
-    "recycle": "npm run stop; sleep 1 && npm run build; sleep 1 && npm run start",
-    "recycle:prod": "npm run stop:prod; sleep 1 && npm run build:prod; sleep 1 && npm run start:prod"
+    "recycle": "npm run down; sleep 1 && npm run build; sleep 1 && npm run start",
+    "recycle:prod": "npm run down:prod; sleep 1 && npm run build:prod; sleep 1 && npm run start:prod",
+    "restart": "npm run stop; sleep 1 && npm run start",
+    "restart:prod": "npm run stop:prod; sleep 1 npm run start:prod"
   },
   "author": "Tim Gittos",
   "license": "ISC",
