--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "down:prod": "docker-compose -f docker-compose.prod.yml down",
     "logs": "docker-compose -f docker-compose.dev.yml logs -f",
     "logs:prod": "docker-compose -f docker-compose.prod.yml logs -f",
-    "recycle": "npm run down; sleep 1 && npm run build; sleep 1 && npm run start",
-    "recycle:prod": "npm run down:prod; sleep 1 && npm run build:prod; sleep 1 && npm run start:prod",
+    "recycle": "npm run down; sleep 1 && npm run build; sleep 1 && npm run up",
+    "recycle:prod": "npm run down:prod; sleep 1 && npm run build:prod; sleep 1 && npm run up:prod",
     "restart": "npm run stop; sleep 1 && npm run start",
     "restart:prod": "npm run stop:prod; sleep 1 npm run start:prod"
   },
