--- a/.env.dev
+++ b/.env.dev
@@ -1,15 +1,9 @@
+MP_DB__USERNAME="mp_dev"
+MP_DB__PASSWORD="mp-dev-password1#"
+MYSQL_ROOT_PASSWORD="mp-dev-password1#"
 MP_ENVIRONMENT="development"
 MP_IEX_SECRET=""
 MP_PLAID_SECRET="69f58490b7157035d4c2eae537577e"
-MP_DB__USERNAME="mp_dev"
-MP_DB__PASSWORD="mp!QAZxsw2"
 MP_SECRET="omg money printer go brrr hahaha"
 MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
-MYSQL_ROOT_PASSWORD="dev-root-password"
-MATOMO_DB_USERNAME="mp_dev"
-MATOMO_DB_PASSWORD="mp!QAZxsw2"
 NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
-HASURA_MYSQL_SCHEMA="mp_dev"
-HASURA_MYSQL_PORT="3306"
-HASURA_MYSQL_USERNAME="mp_dev"
-HASURA_MYSQL_PASSWORD="mp!QAZxsw2"
