--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ graphene==2.1.9
 jupyter-core==4.9.1
 Twisted==21.7.0
 Werkzeug==2.0.2
-mysqlclient==2.1.0
 SQLAlchemy==1.4.29
 sqlalchemy-orm==1.2.2
 dynaconf==3.1.7
@@ -36,3 +35,4 @@ graphene-sqlalchemy>=2.0
 flask-graphql>=2.0.1
 pytest-xdist==2.5.0
 faker==10.0.0
+psycopg2==2.9.3
