--- a/.env.dev
+++ b/.env.dev
@@ -3,17 +3,19 @@ MP_SECRET="omg money printer go brrr hahaha"
 
 MP_API__USERNAME="mp_dev"
 MP_API__PASSWORD="mp-dev-password1#"
-MP_API__PORT=""
-MP_API__PORT="schema"
+MP_API__PORT="5432"
+MP_API__SCHEMA="mp_dev"
 
 MP_STONKS__USERNAME="mp_dev"
 MP_STONKS__PASSWORD="mp-dev-password1#"
-MP_STONKS__PORT=""
-MP_STONKS__PORT="schema"
+MP_STONKS__PORT="5432"
+MP_STONKS__SCHEMA="mp_stonks"
 
 MYSQL_ROOT_PASSWORD="mp-dev-password1#"
+POSTGRES_PASSWORD="mp-dev-password1#"
+
 MP_IEX__SECRET=""
-MP_IEX__PUBLISHABLE: "pk_3394e9ba369a45d2b3efdd6c0bbb168f"
+MP_IEX__PUBLISHABLE="pk_3394e9ba369a45d2b3efdd6c0bbb168f"
 MP_PLAID__SECRET="69f58490b7157035d4c2eae537577e"
 MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
 NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
