--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "clean": "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete",
     "build": "docker-compose -f docker-compose.dev.yml --env-file=.env.dev build",
     "build:prod": "docker-compose -f docker-compose.prod.yml --env-file=.env.prod build",
-    "test": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'python bin/test'; exit $?",
-    "test:focus": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/'; exit $?",
-    "test:ci": "docker exec -e MP_CI=true -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'python bin/test'; exit $?",
+    "tests": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'python bin/tests'; exit $?",
+    "tests:focus": "docker exec --tty -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'pytest -n 1 -m focus --cov-config=.coveragerc --cov=src --cov-report term:skip-covered src/'; exit $?",
+    "tests:ci": "docker exec -e MP_CI=true -e MP_ENVIRONMENT=test $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) sh -c 'python bin/tests'; exit $?",
     "gendoc": "docker exec --tty $(docker-compose -f docker-compose.dev.yml ps --env-file=.env.dev -q api) /bin/bash -c \"MP_ENVIRONMENT=development PYTHONPATH=src python bin/dev/gendoc\"",
     "db:init": "/bin/bash bin/init-db",
     "db:migrate": "docker exec --tty $(docker-compose -f docker-compose.dev.yml --env-file=.env.dev ps -q api) /bin/bash -c \"cd src && MP_ENVIRONMENT=development alembic revision --autogenerate\"",
